- Changed: OpenZWave, Renamed internally 'Color Control' to 'Color"
- Changed: Webserver, Refactor the webserver server class to separate the HTTP and HTTPS implementation, and gather all server settings in the new server_settings and ssl_server_settings classes.
- Changed: Webserver, Add -sslmethod, -ssloptions and -ssldhparam arguments to domoticz executable.
- Fixed: Alert Sensor, displaying sValue again
- Fixed: Blockly, Set user variables (you need to resave your blockly's)
- Fixed: Blockly, string uservariables where saved with quotes when not using with set-after
- Fixed: Changing device order when selected a Room in the lights/utility tab
- Fixed: CM180i graph display
- Fixed: Dummy RGB sensor creation (was created with wrong ID)
- Fixed: Edit Light/Switch Security sensors protected checkbox
- Fixed: EventSystem, now also handling sensors that only uses numbers instead of strings for data
- Fixed: Log display in webgui for log items containing multiple lines
- Fixed: Manual add Blyss type (Group code was wrong)
- Fixed: Manual add LightwaveRF type (DeviceID was wrong)
- Fixed: Month temperature report average is now calculated by the daily average value
- Fixed: MySensors, barometric value was not used when below 995 hPa
- Fixed: Nest Thermostat, setting set point in Fahrenheit
- Fixed: RFXCom (433) protocol setup, Home Comfort checkbox did not show correct state
- Fixed: RGB sensor now also uses the RGB popup system
- Fixed: S0 Meter, fix for reloading totals of (#179)
- Fixed: Thermosmart unpause
- Fixed: The select menu of a selector switch can come out of its frame depending on the width of the page.
- Fixed: Fix the cleanup of sessions by shortening the validity duration of long term cookies (30 days instead of 1 year) and by cleaning all sessions asynchronously every 15 minutes.
- Fixed: Fix a potential issue in login process using a certificate when the subjectDN of the certificate has a different format.