@@ -45,6 +45,7 @@ Version 2.4xxx
 - Changed: OpenZWave, Renamed internally 'Color Control' to 'Color"
 - Changed: Webserver, Refactor the webserver server class to separate the HTTP and HTTPS implementation, and gather all server settings in the new server_settings and ssl_server_settings classes.
 - Changed: Webserver, Add -sslmethod, -ssloptions and -ssldhparam arguments to domoticz executable.
+- Changed: Webserver, Refactor the logs to distinguish the two servers (HTTP and SSL).
 - Fixed: Alert Sensor, displaying sValue again
 - Fixed: Blockly, Set user variables (you need to resave your blockly's)
 - Fixed: Blockly, string uservariables where saved with quotes when not using with set-after
